fix position mobile

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -14,7 +14,7 @@
     z-index: 100;
   }
   #greetings-div {
-    margin-top: 200px;
+    margin-top: 110px;
   }
   #greetings-span {
     color: #faf3e3;
